@@ -1,0 +1,17 @@
+0 HEAD
+0 @P1@ INDI 
+1 NAME Alice /A/
+1 SEX F
+1 FAMS @F1@
+0 @P2@ INDI 
+1 NAME Bob /B/
+1 SEX M
+1 FAMS @F1@
+0 @F1@ FAM 
+1 MARR
+2 DATE 1 Jan 1970
+1 HUSB @P2@
+2 DATE 1 Jan 1971
+1 WIFE @P1@
+2 DATE 1 Jan 1972
+0 TRLR
